--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div class="main">
     <div class="card1">
-      <h3>Rakim Ali</h3>
+      <img src="/assets/pexels-marek-piwnicki-11032510.jpg" alt="pahar2">
     </div>
     <div class="card2">
-      <h3>Rakim ali</h3>
+      <img src="/assets/pexels-marek-piwnicki-11032510.jpg" alt="pahar1">
     </div>
     <div class="card3">
-      <h3>Rakim ali</h3>
+      <img src="/assets/pexels-marek-piwnicki-11032510.jpg" alt="pahar3">
     </div>
   </div>
 </body>
